--- a/template/index.html
+++ b/template/index.html
@@ -7,6 +7,9 @@
     <title>API_KEY_GENERATOR</title>
     {%load static%}
     <link href="{% static 'css/main.css'%}" rel="stylesheet">
+
+    {%load static%}
+    <link href="{% static 'js/main.js'%}" rel="script">
 </head>
 
 <body class="flex_col center center">
@@ -19,15 +22,15 @@
                 <br>
                 <input type="text" placeholder="username" name="username" autocomplete="username">
                 <br>
-                <label for="email">Email</label>
+                <label for="mail">Email</label>
                 <br>
                 <input type="email" placeholder="email" name="mail" autocomplete="email">
                 <br>
                 <label for="phone">phonenumber</label>
                 <br>
-                <input type="phone" placeholder="mobilenumber" name="phone">
+                <input type="phone" placeholder="mobilenumber" name="phone" autocomplete="tel">
                 <br>
-                <button>Submit</button>
+                <button type="submit" onclick=onclick()>Submit</button>
             </div>
         </form>
     </main>
